--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ numpy>=1.24.0
 folium>=0.14.0
 streamlit-folium>=0.13.0
 seaborn>=0.12.0
-matplotlib>=3.7.0 
+matplotlib>=3.7.0
+statsmodels>=0.14.0 
