--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ folium>=0.14.0
 streamlit-folium>=0.13.0
 seaborn>=0.12.0
 matplotlib>=3.7.0
-statsmodels>=0.14.0 
+statsmodels>=0.14.0
+scikit-learn>=1.3.0 
